manifests/1.8.0/logging/2elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-elasticsearch
  labels:
    k8s-app: graylog-elasticsearch
  namespace: logging
spec:
  ports:
  - port: 9200
    targetPort: 9200
  clusterIP: None
  selector:
    k8s-app: graylog-elasticsearch
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: graylog-elasticsearch
  labels:
    k8s-app: graylog-elasticsearch
  namespace: logging
spec:
  serviceName: graylog-elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: graylog-elasticsearch
      namespace: logging
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:5.6.9
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: graylog-elasticsearch-data
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: graylog-elasticsearch-data
      labels:
        k8s-app: graylog-elasticsearch-data
      namespace: logging
    spec:
      storageClassName: gp2
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
